# factory_of_the_future

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  dashboard.c  docker-compose.yml  factory.c  ml_module.c
dashlib/: commands.c  commands.h  database.c  database.h  factory_comm.c  factory_comm.h  factory_data.c  factory_data.h  listing.c  listing.h  plot.c  plot.h
data/: hours.csv  temperatures.csv
interfaces/: network_commands.h  peripherals.h
mlearn/: csv.c  csv.h  data_files.c  data_files.h  fit.c  fit.h  predict_temp.c  predict_temp.h
network/: connection.c  connection.h  tcp.h  tcp_client.c  tcp_server.c
peripherals/: peripherals_control.c  peripherals_test.c
utils/: host_list.c  host_list.h  sensor_data_utils.c  sensor_data_utils.h  sensor_history.c  sensor_history.h
